# ai4os-yolo-torch

./: Dockerfile  README.md  ai4-metadata.yml  pyproject.toml  requirements-test.txt  tox.ini
.github/workflows/: github-to-gitlab.yml
.sqa/: config.yml
ai4os_yolo/: README.md  __init__.py  config.py  seg_coco_json_to_yolo.py  utils.py  yolo_versions.py
ai4os_yolo/hpo_yolo/: README.md
api/: __init__.py  config.py  responses.py  schemas.py  utils.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-yolov8_api_start.ipynb
tests/data/det/: data.yaml
tests/data/seg/: label.yaml
tests/test_metadata/: test_requirements.py
tests/test_predictions/: conftest.py  test_requirements.py
tests/test_training/: conftest.py
yolov8_api/: __init__.py  yolo_versions.py
